# libbw64

./: .appveyor.yml  .clang_complete  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  codecov.yml  flake.nix  format.sh
.github/workflows/: build.yml  check_format.yml  windows.yml
cmake/: warnings.cmake
config/: bw64Config.cmake.in  libbw64Config.cmake.in  version.hpp.in
docs/: Doxyfile  conf.py  getting_started.rst  index.rst  reference.rst  requirements.txt  tutorial.rst
examples/: CMakeLists.txt  bw64_create_sine.cpp  bw64_extract_adm.cpp  bw64_info.cpp  bw64_read_write.cpp
include/bw64/: bw64.hpp  chunks.hpp  parser.hpp  reader.hpp  utils.hpp  writer.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt  chunk_tests.cpp  file_tests.cpp  main.cpp  utils_tests.cpp
